# finite_element_parallelization_OpenMP_MPI

./: README.md
code/: CMakeLists.txt  MPIOutput_Medium_8_viz.22437216  OMPOutput_Coarse_10.22494445  OMPOutput_Fine_10.22493995  OMPOutput_Medium_10.22494225  README.md  SerialOutput_Coarse_fast.22492433  SerialOutput_Fine_fast.22491745  SerialOutput_Medium_fast.22491657  SerialOutput_O0_ax.22451449  SerialOutput_O1.22452240  SerialOutput_O1_ax.22451270  SerialOutput_O2.22452132  SerialOutput_O2_ax.22451152  SerialOutput_O2_ax_2.22456996  SerialOutput_O3.22451976  SerialOutput_O3_2.22458183  SerialOutput_O3_ax.22451001  SerialOutput_O3_ax_2.22456133  SerialOutput_O3_ipo_noprecdiv_static_xSKYLAKE_AVX512.22453154  SerialOutput_O3_ipo_noprecdiv_xSKYLAKE_AVX512.22452706  SerialOutput_Ofast.22453629  SerialOutput_Os.22454916  SerialOutput_fast.22458542  SerialOutput_g_fast.22452347  coarse-mesh.pvtu  coarse-mesh.vtu  fine-mesh.pvtu  fine-mesh.vtu  medium-mesh.vtu  medium-mesh_1.vtu  medium-mesh_2.vtu  medium-mesh_3.vtu  medium-mesh_4.vtu  medium-mesh_5.vtu  medium-mesh_6.vtu  medium-mesh_7.vtu  runMPI.j  runOMP.j  runSerial.j  (+3 more)
code/build-mpi/: 2d_Unsteady_MPI  CMakeCache.txt  Makefile  cmake_install.cmake
code/build-openmp-a/: 2d_Unsteady_OpenMP_A  CMakeCache.txt  Makefile  cmake_install.cmake
code/build-openmp-b/: 2d_Unsteady_OpenMP_B  CMakeCache.txt  Makefile  cmake_install.cmake
code/build-serial/: 2d_Unsteady_Serial  CMakeCache.txt  Makefile  cmake_install.cmake
code/coarse-mesh/: mien  minf  mrng  mxyz
code/fine-mesh/: mien  minf  mrng  mxyz
code/medium-mesh/: mien  minf  mrng  mxyz
code/result_mpi/: MPIOutput_Coarse_1.22434273  MPIOutput_Coarse_12.22434669  MPIOutput_Coarse_16.22434727  MPIOutput_Coarse_2.22434368  MPIOutput_Coarse_4.22434457  MPIOutput_Coarse_6.22434501  MPIOutput_Coarse_8.22434530  MPIOutput_Fine_1.22434982  MPIOutput_Fine_12.22436675  MPIOutput_Fine_16.22436810  MPIOutput_Fine_2.22435289  MPIOutput_Fine_4.22435367  MPIOutput_Fine_6.22436243  MPIOutput_Fine_8.22436599  MPIOutput_Medium_1.22434965  MPIOutput_Medium_12.22434819  MPIOutput_Medium_16.22434768  MPIOutput_Medium_2.22434904  MPIOutput_Medium_4.22434878  MPIOutput_Medium_6.22434866  MPIOutput_Medium_8.22434838
code/result_openmp_a/: OMPOutput_A_1.22242422  OMPOutput_A_2.22243595  OMPOutput_A_4.22245939
code/result_openmp_b/mesh_size_thread/: OMPOutput_B_coarse_1.22274643  OMPOutput_B_coarse_12.22274189  OMPOutput_B_coarse_2.22274613  OMPOutput_B_coarse_4.22274433  OMPOutput_B_coarse_6.2274402  OMPOutput_B_coarse_8.22274253  OMPOutput_B_fine_1.22275878  OMPOutput_B_fine_12.22275368  OMPOutput_B_fine_2.22275651  OMPOutput_B_fine_4.22275618  OMPOutput_B_fine_6.22275497  OMPOutput_B_fine_8.22275410  OMPOutput_B_medium_1.22274760  OMPOutput_B_medium_12.22275356  OMPOutput_B_medium_2.22274803  OMPOutput_B_medium_4.22274943  OMPOutput_B_medium_6.22275004  OMPOutput_B_medium_8.22275119
code/result_openmp_b/schedule_chunk/: OMPError.22272752  OMPOutput_B__guided_64.22258452  OMPOutput_B_auto.22253840  OMPOutput_B_dynamic_1.22272752  OMPOutput_B_dynamic_1024.22266810  OMPOutput_B_dynamic_128.22250772  OMPOutput_B_dynamic_2048.22311139  OMPOutput_B_dynamic_64.22257319  OMPOutput_B_guided_1.22273806  OMPOutput_B_guided_1024.22269035  OMPOutput_B_guided_128.22252522  OMPOutput_B_guided_2048.22277502  OMPOutput_B_static_1.22271201  OMPOutput_B_static_1024.22265488  OMPOutput_B_static_128.22261671  OMPOutput_B_static_2048.22270145  OMPOutput_B_static_64.22257177
code/result_openmp_b/thread_change/: OMPOutput_B_1.22250610  OMPOutput_B_2.22250602  OMPOutput_B_4.22250595
code/result_serial/: SerialOutput_O0.22233488  SerialOutput_O0_fast.22238607  SerialOutput_O1.22234805  SerialOutput_O1_fast.22239495  SerialOutput_O2.22236420  SerialOutput_O2_fast.22240086  SerialOutput_O3.22240919  SerialOutput_O3_fast.22240353
code/solver-mpi/: CMakeLists.txt  postProcessor.cpp  settings.h  solver.cpp  solver.h  tri.cpp
code/solver-openmp-a/: 2D_Unsteady_Diffusion.cpp  CMakeLists.txt  postProcessor.cpp  settings.h  solver.cpp  solver.h
code/solver-openmp-b/: 2D_Unsteady_Diffusion.cpp  CMakeLists.txt  Makefile  Makefile.backup  postProcessor.cpp  settings.cpp  settings.h  solver.cpp  solver.h
code/solver-serial/: 2D_Unsteady_Diffusion.cpp  CMakeLists.txt  settings.cpp  settings.h  solver.cpp  solver.h
code/visualization/: coarse-mesh.pvtu  coarse-mesh.vtu  coarse-mesh_0.vtu  coarse-mesh_1.vtu  coarse-mesh_10.vtu  coarse-mesh_11.vtu  coarse-mesh_12.vtu  coarse-mesh_13.vtu  coarse-mesh_14.vtu  coarse-mesh_15.vtu  coarse-mesh_2.vtu  coarse-mesh_3.vtu  coarse-mesh_4.vtu  coarse-mesh_5.vtu  coarse-mesh_6.vtu  coarse-mesh_7.vtu  coarse-mesh_8.vtu  coarse-mesh_9.vtu  fine-mesh.pvtu  fine-mesh.vtu  fine-mesh_0.vtu  fine-mesh_1.vtu  fine-mesh_10.vtu  fine-mesh_11.vtu  fine-mesh_12.vtu  fine-mesh_13.vtu  fine-mesh_14.vtu  fine-mesh_15.vtu  fine-mesh_2.vtu  fine-mesh_3.vtu  fine-mesh_4.vtu  fine-mesh_5.vtu  fine-mesh_6.vtu  fine-mesh_7.vtu  fine-mesh_8.vtu  fine-mesh_9.vtu  medium-mesh.pvtu  medium-mesh_0.vtu  medium-mesh_1.vtu  medium-mesh_10.vtu  (+11 more)
